[workspace]
resolver = "2"

members = [
    "goodmetrics",
    "proto_generator",
]

[workspace.package]
version = "6.0.3"
authors = ["kvc0"]
repository = "https://github.com/kvc0/goodmetrics_rs"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
keywords = ["metrics", "goodmetrics", "service", "performance"]
categories = ["web-programming", "development-tools::profiling"]

[workspace.dependencies]
goodmetrics                     = { path = "goodmetrics", version = ">=0" }

ahash                           = { version = "0.8" }
arc-swap                        = { version = "1.7" }
bytes                           = { version = "1.5" }
criterion                       = { version = "0.5" }
env_logger                      = { version = "0.11" }
exponential-histogram           = { version = "0.2" }
futures                         = { version = "0.3" }
futures-batch                   = { version = "0.6" }
http-body                       = { version = "1.0" }
hyper                           = { version = "1.4" }
hyper-rustls                    = { version = "0.27", features = ["http2"] }
hyper-util                      = { version = "0.1" }
log                             = { version = "0.4" }
ordered-float                   = { version = "4.1" }
prost                           = { version = "0.13" }
rand                            = { version = "0.9" }
test-log                        = { version = "0.2" }
tokio                           = { version = "1.33" }
tokio-rustls                    = { version = "0.26", features = ["aws_lc_rs"] }
tokio-stream                    = { version = "0.1" }
tokio-test                      = { version = "0.4" }
tonic                           = { version = "0.12", features = ["tls"] }
tonic-build                     = { version = "0.12", features = [] }
tower                           = { version = "0.5" }
webpki-roots                    = { version = "0" }

