[package]
name = "goodmetrics"
description = "Unlimited cardinality, fast metrics recording - for services"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
ahash-hasher    = ["ahash"]
introspect      = ["arc-swap"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
bench = false

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "lightstep"
harness = false

[[bench]]
name = "goodmetrics"
harness = false

[dependencies]
ahash                           = { workspace = true, optional = true }
arc-swap                        = { workspace = true, optional = true }
bytes                           = { workspace = true }
exponential-histogram           = { workspace = true }
futures                         = { workspace = true }
futures-batch                   = { workspace = true }
http-body                       = { workspace = true }
hyper                           = { workspace = true }
hyper-rustls                    = { workspace = true }
hyper-util                      = { workspace = true }
log                             = { workspace = true }
ordered-float                   = { workspace = true }
prost                           = { workspace = true }
tokio                           = { workspace = true }
tokio-rustls                    = { workspace = true }
tokio-stream                    = { workspace = true }
tonic                           = { workspace = true }
tower                           = { workspace = true }

[dev-dependencies]
criterion                       = { workspace = true }
env_logger                      = { workspace = true }
goodmetrics-derive              = { workspace = true }
rand                            = { workspace = true }
test-log                        = { workspace = true }
tokio                           = { workspace = true, features = ["rt-multi-thread"]}
tokio-test                      = { workspace = true }
webpki-roots                    = { workspace = true }
