[package]
name = "goodmetrics"
version = "2.1.0"
edition = "2021"
description = "Unlimited cardinality, fast metrics recording - for services"
license = "Apache-2.0"
authors = ["kvc0"]
readme = "../README.md"
repository = "https://github.com/kvc0/goodmetrics_rs"
keywords = ["metrics", "goodmetrics", "service", "performance"]
categories = ["web-programming", "development-tools::profiling"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
bench = false

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "lightstep"
harness = false

[[bench]]
name = "goodmetrics"
harness = false

[dependencies]
log =  { version = "0.4" }

futures = { version = "0.3" }
futures-batch = { version = "0.6" }

arc-swap = { version = "1.6" }
bytes = { version = "1.5" }
http-body = { version = "0.4" }
hyper = { version = "0.14" }
hyper-rustls = { version = "0.24", features = ["http2"] }
prost = { version = "0.12" }
tokio = { version = "1.33" }
tokio-rustls = { version = "0.24", features = ["dangerous_configuration"] }
tonic = { version = "0.10", features = ["tls"] }
tower = { version = "0.4" }

object-pool = { version = "0.5" }
ordered-float = { version = "4.1" }

[dev-dependencies]
env_logger = { version = "0.10" }
test-log = { version = "0.2" }
tokio = { version = "1.33", features = ["rt-multi-thread"]}
tokio-test = { version = "0.4" }
webpki-roots = { version = "0" }

criterion = { version = "0.5" }
