[package]
name = "mtop_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goodmetrics     = { workspace = true }
mtop_messages   = { workspace = true }

futures         = { workspace = true }
tokio           = { workspace = true }
tokio-stream    = { workspace = true, features = [ "sync" ] }
tonic           = { workspace = true }
