[package]
name = "codegenerator"
version = "1.4.0"
edition = "2021"
description = "Protocol buffers code generator - for making sure you don't need protoc just for goodmetrics"
license = "Apache-2.0"
authors = ["kvc0"]
repository = "https://github.com/kvc0/goodmetrics_rs"
publish = false

[lib]
bench = false

[build-dependencies]
tonic-build = { version = "0.8", features = [] }
